# aw-sdl

./: .gitmodules  README.md  aw-sdl-bindings.asd  aw-sdl.asd  claw-sdl-bindings.asd  claw-sdl.asd
.github/workflows/: build.yaml
bindings/: aarch64-linux-android.lisp  x86_64-pc-linux-gnu.lisp  x86_64-pc-windows-gnu.lisp  x86_64-w64-mingw32.lisp
example/: example.lisp
src/: claw.lisp
src/lib/: .gitignore  CMakeLists.txt  SDL_config.aarch64-linux-android.h  SDL_config.x86_64-pc-linux-gnu.h  SDL_platform.aarch64-linux-android.h  SDL_platform.x86_64-pc-linux-gnu.h  adapter.aarch64-linux-android.c  adapter.c  adapter.x86_64-pc-linux-gnu.c  adapter.x86_64-pc-windows-gnu.c  adapter.x86_64-w64-mingw32.c  build.ps1  build.sh
